# architectural-grc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
architectural_grc/contexts/: event_context.py
architectural_grc/model/: incident_report.py
architectural_grc/prompts/: event_narrative_prompt.py
architectural_grc/setup/: bom_graphdb.py  historian.py  sap.py  shift_reports.py
docs/architectural_governance_case_study/: README.md
tests/: test_models.py
